// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratePropsJavaPojo can generate fixture ALL_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropPropsObjectArrayProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class AllPropPropsObjectArrayProp {
  private ArrayList<String> mArray;
  @DoNotStrip
  public ArrayList<String> getArray() {
    return mArray;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropPropsObjectPrimitiveRequiredProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class AllPropPropsObjectPrimitiveRequiredProp {
  private @Nullable String mString;
  private boolean mBoolean;
  private float mFloat;
  private @Nullable String mStringNoDefault;
  private @Nullable Boolean mBooleanNoDefault;
  private @Nullable Float mFloatNoDefault;
  private @Nullable ReadableMap mImage;
  private @Nullable Integer mColor;
  private @Nullable ReadableMap mPoint;
  @DoNotStrip
  public @Nullable String getString() {
    return mString;
  }
  @DoNotStrip
  public boolean getBoolean() {
    return mBoolean;
  }
  @DoNotStrip
  public float getFloat() {
    return mFloat;
  }
  @DoNotStrip
  public @Nullable String getStringNoDefault() {
    return mStringNoDefault;
  }
  @DoNotStrip
  public @Nullable Boolean getBooleanNoDefault() {
    return mBooleanNoDefault;
  }
  @DoNotStrip
  public @Nullable Float getFloatNoDefault() {
    return mFloatNoDefault;
  }
  @DoNotStrip
  public @Nullable ReadableMap getImage() {
    return mImage;
  }
  @DoNotStrip
  public @Nullable Integer getColor() {
    return mColor;
  }
  @DoNotStrip
  public @Nullable ReadableMap getPoint() {
    return mPoint;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropPropsNestedPropANestedPropB.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropPropsNestedPropANestedPropB {
  private @Nullable String mNestedPropC;
  @DoNotStrip
  public @Nullable String getNestedPropC() {
    return mNestedPropC;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropPropsNestedPropA.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropPropsNestedPropA {
  private AllPropPropsNestedPropANestedPropB mNestedPropB;
  @DoNotStrip
  public AllPropPropsNestedPropANestedPropB getNestedPropB() {
    return mNestedPropB;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropPropsNestedArrayAsPropertyArrayPropElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropPropsNestedArrayAsPropertyArrayPropElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropPropsNestedArrayAsProperty.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class AllPropPropsNestedArrayAsProperty {
  private ArrayList<AllPropPropsNestedArrayAsPropertyArrayPropElement> mArrayProp;
  @DoNotStrip
  public ArrayList<AllPropPropsNestedArrayAsPropertyArrayPropElement> getArrayProp() {
    return mArrayProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropProps {
  private @Nullable String mStringPropNoDefault;
  private @Nullable Boolean mBooleanPropNoDefault;
  private @Nullable Float mFloatPropNoDefault;
  private @Nullable String mStringProp;
  private boolean mBooleanProp;
  private float mFloatProp;
  private int mIntProp;
  private @Nullable String mStringUserDefaultProp;
  private boolean mBooleanUserDefaultProp;
  private float mFloatUserDefaultProp;
  private int mIntUserDefaultProp;
  private @Nullable String mStringEnumProp;
  private @Nullable Integer mIntEnumProp;
  private AllPropPropsObjectArrayProp mObjectArrayProp;
  private AllPropPropsObjectPrimitiveRequiredProp mObjectPrimitiveRequiredProp;
  private AllPropPropsNestedPropA mNestedPropA;
  private AllPropPropsNestedArrayAsProperty mNestedArrayAsProperty;
  @DoNotStrip
  public @Nullable String getStringPropNoDefault() {
    return mStringPropNoDefault;
  }
  @DoNotStrip
  public @Nullable Boolean getBooleanPropNoDefault() {
    return mBooleanPropNoDefault;
  }
  @DoNotStrip
  public @Nullable Float getFloatPropNoDefault() {
    return mFloatPropNoDefault;
  }
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
  @DoNotStrip
  public boolean getBooleanProp() {
    return mBooleanProp;
  }
  @DoNotStrip
  public float getFloatProp() {
    return mFloatProp;
  }
  @DoNotStrip
  public int getIntProp() {
    return mIntProp;
  }
  @DoNotStrip
  public @Nullable String getStringUserDefaultProp() {
    return mStringUserDefaultProp;
  }
  @DoNotStrip
  public boolean getBooleanUserDefaultProp() {
    return mBooleanUserDefaultProp;
  }
  @DoNotStrip
  public float getFloatUserDefaultProp() {
    return mFloatUserDefaultProp;
  }
  @DoNotStrip
  public int getIntUserDefaultProp() {
    return mIntUserDefaultProp;
  }
  @DoNotStrip
  public @Nullable String getStringEnumProp() {
    return mStringEnumProp;
  }
  @DoNotStrip
  public @Nullable Integer getIntEnumProp() {
    return mIntEnumProp;
  }
  @DoNotStrip
  public AllPropPropsObjectArrayProp getObjectArrayProp() {
    return mObjectArrayProp;
  }
  @DoNotStrip
  public AllPropPropsObjectPrimitiveRequiredProp getObjectPrimitiveRequiredProp() {
    return mObjectPrimitiveRequiredProp;
  }
  @DoNotStrip
  public AllPropPropsNestedPropA getNestedPropA() {
    return mNestedPropA;
  }
  @DoNotStrip
  public AllPropPropsNestedArrayAsProperty getNestedArrayAsProperty() {
    return mNestedArrayAsProperty;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture ALL_PROP_WITH_OPTIONAL_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalGenPropsObjectArrayProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class AllPropWithOptionalGenPropsObjectArrayProp {
  private ArrayList<String> mArray;
  @DoNotStrip
  public ArrayList<String> getArray() {
    return mArray;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalGenPropsObjectPrimitiveRequiredProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class AllPropWithOptionalGenPropsObjectPrimitiveRequiredProp {
  private @Nullable String mString;
  private boolean mBoolean;
  private float mFloat;
  private @Nullable String mStringNoDefault;
  private @Nullable Boolean mBooleanNoDefault;
  private @Nullable Float mFloatNoDefault;
  private @Nullable ReadableMap mImage;
  private @Nullable Integer mColor;
  private @Nullable ReadableMap mPoint;
  @DoNotStrip
  public @Nullable String getString() {
    return mString;
  }
  @DoNotStrip
  public boolean getBoolean() {
    return mBoolean;
  }
  @DoNotStrip
  public float getFloat() {
    return mFloat;
  }
  @DoNotStrip
  public @Nullable String getStringNoDefault() {
    return mStringNoDefault;
  }
  @DoNotStrip
  public @Nullable Boolean getBooleanNoDefault() {
    return mBooleanNoDefault;
  }
  @DoNotStrip
  public @Nullable Float getFloatNoDefault() {
    return mFloatNoDefault;
  }
  @DoNotStrip
  public @Nullable ReadableMap getImage() {
    return mImage;
  }
  @DoNotStrip
  public @Nullable Integer getColor() {
    return mColor;
  }
  @DoNotStrip
  public @Nullable ReadableMap getPoint() {
    return mPoint;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalGenPropsNestedPropANestedPropB.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropWithOptionalGenPropsNestedPropANestedPropB {
  private @Nullable String mNestedPropC;
  @DoNotStrip
  public @Nullable String getNestedPropC() {
    return mNestedPropC;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalGenPropsNestedPropA.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropWithOptionalGenPropsNestedPropA {
  private AllPropWithOptionalGenPropsNestedPropANestedPropB mNestedPropB;
  @DoNotStrip
  public AllPropWithOptionalGenPropsNestedPropANestedPropB getNestedPropB() {
    return mNestedPropB;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalGenPropsNestedArrayAsPropertyArrayPropElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropWithOptionalGenPropsNestedArrayAsPropertyArrayPropElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalGenPropsNestedArrayAsProperty.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class AllPropWithOptionalGenPropsNestedArrayAsProperty {
  private ArrayList<AllPropWithOptionalGenPropsNestedArrayAsPropertyArrayPropElement> mArrayProp;
  @DoNotStrip
  public ArrayList<AllPropWithOptionalGenPropsNestedArrayAsPropertyArrayPropElement> getArrayProp() {
    return mArrayProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalGenProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropWithOptionalGenProps {
  private @Nullable String mStringPropNoDefault;
  private @Nullable Boolean mBooleanPropNoDefault;
  private @Nullable Float mFloatPropNoDefault;
  private @Nullable String mStringProp;
  private boolean mBooleanProp;
  private float mFloatProp;
  private int mIntProp;
  private @Nullable String mStringUserDefaultProp;
  private boolean mBooleanUserDefaultProp;
  private float mFloatUserDefaultProp;
  private int mIntUserDefaultProp;
  private @Nullable String mStringEnumProp;
  private @Nullable Integer mIntEnumProp;
  private AllPropWithOptionalGenPropsObjectArrayProp mObjectArrayProp;
  private AllPropWithOptionalGenPropsObjectPrimitiveRequiredProp mObjectPrimitiveRequiredProp;
  private AllPropWithOptionalGenPropsNestedPropA mNestedPropA;
  private AllPropWithOptionalGenPropsNestedArrayAsProperty mNestedArrayAsProperty;
  @DoNotStrip
  public @Nullable String getStringPropNoDefault() {
    return mStringPropNoDefault;
  }
  @DoNotStrip
  public @Nullable Boolean getBooleanPropNoDefault() {
    return mBooleanPropNoDefault;
  }
  @DoNotStrip
  public @Nullable Float getFloatPropNoDefault() {
    return mFloatPropNoDefault;
  }
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
  @DoNotStrip
  public boolean getBooleanProp() {
    return mBooleanProp;
  }
  @DoNotStrip
  public float getFloatProp() {
    return mFloatProp;
  }
  @DoNotStrip
  public int getIntProp() {
    return mIntProp;
  }
  @DoNotStrip
  public @Nullable String getStringUserDefaultProp() {
    return mStringUserDefaultProp;
  }
  @DoNotStrip
  public boolean getBooleanUserDefaultProp() {
    return mBooleanUserDefaultProp;
  }
  @DoNotStrip
  public float getFloatUserDefaultProp() {
    return mFloatUserDefaultProp;
  }
  @DoNotStrip
  public int getIntUserDefaultProp() {
    return mIntUserDefaultProp;
  }
  @DoNotStrip
  public @Nullable String getStringEnumProp() {
    return mStringEnumProp;
  }
  @DoNotStrip
  public @Nullable Integer getIntEnumProp() {
    return mIntEnumProp;
  }
  @DoNotStrip
  public AllPropWithOptionalGenPropsObjectArrayProp getObjectArrayProp() {
    return mObjectArrayProp;
  }
  @DoNotStrip
  public AllPropWithOptionalGenPropsObjectPrimitiveRequiredProp getObjectPrimitiveRequiredProp() {
    return mObjectPrimitiveRequiredProp;
  }
  @DoNotStrip
  public AllPropWithOptionalGenPropsNestedPropA getNestedPropA() {
    return mNestedPropA;
  }
  @DoNotStrip
  public AllPropWithOptionalGenPropsNestedArrayAsProperty getNestedArrayAsProperty() {
    return mNestedArrayAsProperty;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture ALL_PROP_WITH_OPTIONAL_OBJECT_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalObjectGenPropsObjectArrayProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class AllPropWithOptionalObjectGenPropsObjectArrayProp {
  private ArrayList<String> mArray;
  @DoNotStrip
  public ArrayList<String> getArray() {
    return mArray;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalObjectGenPropsObjectPrimitiveRequiredProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class AllPropWithOptionalObjectGenPropsObjectPrimitiveRequiredProp {
  private @Nullable String mString;
  private boolean mBoolean;
  private float mFloat;
  private @Nullable String mStringNoDefault;
  private @Nullable Boolean mBooleanNoDefault;
  private @Nullable Float mFloatNoDefault;
  private @Nullable ReadableMap mImage;
  private @Nullable Integer mColor;
  private @Nullable ReadableMap mPoint;
  @DoNotStrip
  public @Nullable String getString() {
    return mString;
  }
  @DoNotStrip
  public boolean getBoolean() {
    return mBoolean;
  }
  @DoNotStrip
  public float getFloat() {
    return mFloat;
  }
  @DoNotStrip
  public @Nullable String getStringNoDefault() {
    return mStringNoDefault;
  }
  @DoNotStrip
  public @Nullable Boolean getBooleanNoDefault() {
    return mBooleanNoDefault;
  }
  @DoNotStrip
  public @Nullable Float getFloatNoDefault() {
    return mFloatNoDefault;
  }
  @DoNotStrip
  public @Nullable ReadableMap getImage() {
    return mImage;
  }
  @DoNotStrip
  public @Nullable Integer getColor() {
    return mColor;
  }
  @DoNotStrip
  public @Nullable ReadableMap getPoint() {
    return mPoint;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalObjectGenPropsNestedPropANestedPropB.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropWithOptionalObjectGenPropsNestedPropANestedPropB {
  private @Nullable String mNestedPropC;
  @DoNotStrip
  public @Nullable String getNestedPropC() {
    return mNestedPropC;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalObjectGenPropsNestedPropA.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropWithOptionalObjectGenPropsNestedPropA {
  private AllPropWithOptionalObjectGenPropsNestedPropANestedPropB mNestedPropB;
  @DoNotStrip
  public AllPropWithOptionalObjectGenPropsNestedPropANestedPropB getNestedPropB() {
    return mNestedPropB;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalObjectGenPropsNestedArrayAsPropertyArrayPropElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropWithOptionalObjectGenPropsNestedArrayAsPropertyArrayPropElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalObjectGenPropsNestedArrayAsProperty.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class AllPropWithOptionalObjectGenPropsNestedArrayAsProperty {
  private ArrayList<AllPropWithOptionalObjectGenPropsNestedArrayAsPropertyArrayPropElement> mArrayProp;
  @DoNotStrip
  public ArrayList<AllPropWithOptionalObjectGenPropsNestedArrayAsPropertyArrayPropElement> getArrayProp() {
    return mArrayProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/AllPropsNativeComponent/AllPropWithOptionalObjectGenProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.AllPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class AllPropWithOptionalObjectGenProps {
  private @Nullable String mStringPropNoDefault;
  private @Nullable Boolean mBooleanPropNoDefault;
  private @Nullable Float mFloatPropNoDefault;
  private @Nullable String mStringProp;
  private boolean mBooleanProp;
  private float mFloatProp;
  private int mIntProp;
  private @Nullable String mStringUserDefaultProp;
  private boolean mBooleanUserDefaultProp;
  private float mFloatUserDefaultProp;
  private int mIntUserDefaultProp;
  private @Nullable String mStringEnumProp;
  private @Nullable Integer mIntEnumProp;
  private AllPropWithOptionalObjectGenPropsObjectArrayProp mObjectArrayProp;
  private AllPropWithOptionalObjectGenPropsObjectPrimitiveRequiredProp mObjectPrimitiveRequiredProp;
  private AllPropWithOptionalObjectGenPropsNestedPropA mNestedPropA;
  private AllPropWithOptionalObjectGenPropsNestedArrayAsProperty mNestedArrayAsProperty;
  @DoNotStrip
  public @Nullable String getStringPropNoDefault() {
    return mStringPropNoDefault;
  }
  @DoNotStrip
  public @Nullable Boolean getBooleanPropNoDefault() {
    return mBooleanPropNoDefault;
  }
  @DoNotStrip
  public @Nullable Float getFloatPropNoDefault() {
    return mFloatPropNoDefault;
  }
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
  @DoNotStrip
  public boolean getBooleanProp() {
    return mBooleanProp;
  }
  @DoNotStrip
  public float getFloatProp() {
    return mFloatProp;
  }
  @DoNotStrip
  public int getIntProp() {
    return mIntProp;
  }
  @DoNotStrip
  public @Nullable String getStringUserDefaultProp() {
    return mStringUserDefaultProp;
  }
  @DoNotStrip
  public boolean getBooleanUserDefaultProp() {
    return mBooleanUserDefaultProp;
  }
  @DoNotStrip
  public float getFloatUserDefaultProp() {
    return mFloatUserDefaultProp;
  }
  @DoNotStrip
  public int getIntUserDefaultProp() {
    return mIntUserDefaultProp;
  }
  @DoNotStrip
  public @Nullable String getStringEnumProp() {
    return mStringEnumProp;
  }
  @DoNotStrip
  public @Nullable Integer getIntEnumProp() {
    return mIntEnumProp;
  }
  @DoNotStrip
  public AllPropWithOptionalObjectGenPropsObjectArrayProp getObjectArrayProp() {
    return mObjectArrayProp;
  }
  @DoNotStrip
  public AllPropWithOptionalObjectGenPropsObjectPrimitiveRequiredProp getObjectPrimitiveRequiredProp() {
    return mObjectPrimitiveRequiredProp;
  }
  @DoNotStrip
  public AllPropWithOptionalObjectGenPropsNestedPropA getNestedPropA() {
    return mNestedPropA;
  }
  @DoNotStrip
  public AllPropWithOptionalObjectGenPropsNestedArrayAsProperty getNestedArrayAsProperty() {
    return mNestedArrayAsProperty;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture ARRAY_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsObjectElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsNativeComponentPropsObjectElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsArrayElementObjectElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsNativeComponentPropsArrayElementObjectElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsArrayElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsNativeComponentPropsArrayElement {
  private ArrayList<ArrayPropsNativeComponentPropsArrayElementObjectElement> mObject;
  @DoNotStrip
  public ArrayList<ArrayPropsNativeComponentPropsArrayElementObjectElement> getObject() {
    return mObject;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.Dynamic;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.yoga.YogaValue;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsNativeComponentProps {
  private ArrayList<String> mNames;
  private ArrayList<Boolean> mDisableds;
  private ArrayList<Integer> mProgress;
  private ArrayList<Float> mRadii;
  private ArrayList<Integer> mColors;
  private ArrayList<ReadableMap> mSrcs;
  private ArrayList<ReadableMap> mPoints;
  private ArrayList<YogaValue> mDimensions;
  private ArrayList<String> mSizes;
  private ArrayList<ArrayPropsNativeComponentPropsObjectElement> mObject;
  private ArrayList<ArrayPropsNativeComponentPropsArrayElement> mArray;
  private ArrayList<ArrayList<ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement>> mArrayOfArrayOfObject;
  private ArrayList<Dynamic> mArrayOfMixed;
  @DoNotStrip
  public ArrayList<String> getNames() {
    return mNames;
  }
  @DoNotStrip
  public ArrayList<Boolean> getDisableds() {
    return mDisableds;
  }
  @DoNotStrip
  public ArrayList<Integer> getProgress() {
    return mProgress;
  }
  @DoNotStrip
  public ArrayList<Float> getRadii() {
    return mRadii;
  }
  @DoNotStrip
  public ArrayList<Integer> getColors() {
    return mColors;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getSrcs() {
    return mSrcs;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getPoints() {
    return mPoints;
  }
  @DoNotStrip
  public ArrayList<YogaValue> getDimensions() {
    return mDimensions;
  }
  @DoNotStrip
  public ArrayList<String> getSizes() {
    return mSizes;
  }
  @DoNotStrip
  public ArrayList<ArrayPropsNativeComponentPropsObjectElement> getObject() {
    return mObject;
  }
  @DoNotStrip
  public ArrayList<ArrayPropsNativeComponentPropsArrayElement> getArray() {
    return mArray;
  }
  @DoNotStrip
  public ArrayList<ArrayList<ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement>> getArrayOfArrayOfObject() {
    return mArrayOfArrayOfObject;
  }
  @DoNotStrip
  public ArrayList<Dynamic> getArrayOfMixed() {
    return mArrayOfMixed;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsNativePrimitivesElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsNativeComponentPropsNativePrimitivesElement {
  private ArrayList<Integer> mColors;
  private ArrayList<ReadableMap> mSrcs;
  private ArrayList<ReadableMap> mPoints;
  @DoNotStrip
  public ArrayList<Integer> getColors() {
    return mColors;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getSrcs() {
    return mSrcs;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getPoints() {
    return mPoints;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsNativeComponentProps {
  private ArrayList<ArrayPropsNativeComponentPropsNativePrimitivesElement> mNativePrimitives;
  @DoNotStrip
  public ArrayList<ArrayPropsNativeComponentPropsNativePrimitivesElement> getNativePrimitives() {
    return mNativePrimitives;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT_WITH_OPTIONAL_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsOptionalGenNativeComponentPropsNativePrimitivesElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsOptionalGenNativeComponentPropsNativePrimitivesElement {
  private ArrayList<Integer> mColors;
  private ArrayList<ReadableMap> mSrcs;
  private ArrayList<ReadableMap> mPoints;
  @DoNotStrip
  public ArrayList<Integer> getColors() {
    return mColors;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getSrcs() {
    return mSrcs;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getPoints() {
    return mPoints;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsOptionalGenNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsOptionalGenNativeComponentProps {
  private ArrayList<ArrayPropsOptionalGenNativeComponentPropsNativePrimitivesElement> mNativePrimitives;
  @DoNotStrip
  public ArrayList<ArrayPropsOptionalGenNativeComponentPropsNativePrimitivesElement> getNativePrimitives() {
    return mNativePrimitives;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT_WITH_OPTIONAL_OBJECT_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsOptionalObjectGenNativeComponentPropsNativePrimitivesElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsOptionalObjectGenNativeComponentPropsNativePrimitivesElement {
  private ArrayList<Integer> mColors;
  private ArrayList<ReadableMap> mSrcs;
  private ArrayList<ReadableMap> mPoints;
  @DoNotStrip
  public ArrayList<Integer> getColors() {
    return mColors;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getSrcs() {
    return mSrcs;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getPoints() {
    return mPoints;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsOptionalObjectGenNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsOptionalObjectGenNativeComponentProps {
  private ArrayList<ArrayPropsOptionalObjectGenNativeComponentPropsNativePrimitivesElement> mNativePrimitives;
  @DoNotStrip
  public ArrayList<ArrayPropsOptionalObjectGenNativeComponentPropsNativePrimitivesElement> getNativePrimitives() {
    return mNativePrimitives;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture ARRAY_PROPS_WITH_OPTIONAL_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsWithOptionalGenNativeComponentPropsObjectElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsWithOptionalGenNativeComponentPropsObjectElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsWithOptionalGenNativeComponentPropsArrayElementObjectElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsWithOptionalGenNativeComponentPropsArrayElementObjectElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsWithOptionalGenNativeComponentPropsArrayElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsWithOptionalGenNativeComponentPropsArrayElement {
  private ArrayList<ArrayPropsWithOptionalGenNativeComponentPropsArrayElementObjectElement> mObject;
  @DoNotStrip
  public ArrayList<ArrayPropsWithOptionalGenNativeComponentPropsArrayElementObjectElement> getObject() {
    return mObject;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsWithOptionalGenNativeComponentPropsArrayOfArrayOfObjectElementElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsWithOptionalGenNativeComponentPropsArrayOfArrayOfObjectElementElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsWithOptionalGenNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.Dynamic;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.yoga.YogaValue;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsWithOptionalGenNativeComponentProps {
  private ArrayList<String> mNames;
  private ArrayList<Boolean> mDisableds;
  private ArrayList<Integer> mProgress;
  private ArrayList<Float> mRadii;
  private ArrayList<Integer> mColors;
  private ArrayList<ReadableMap> mSrcs;
  private ArrayList<ReadableMap> mPoints;
  private ArrayList<YogaValue> mDimensions;
  private ArrayList<String> mSizes;
  private ArrayList<ArrayPropsWithOptionalGenNativeComponentPropsObjectElement> mObject;
  private ArrayList<ArrayPropsWithOptionalGenNativeComponentPropsArrayElement> mArray;
  private ArrayList<ArrayList<ArrayPropsWithOptionalGenNativeComponentPropsArrayOfArrayOfObjectElementElement>> mArrayOfArrayOfObject;
  private ArrayList<Dynamic> mArrayOfMixed;
  @DoNotStrip
  public ArrayList<String> getNames() {
    return mNames;
  }
  @DoNotStrip
  public ArrayList<Boolean> getDisableds() {
    return mDisableds;
  }
  @DoNotStrip
  public ArrayList<Integer> getProgress() {
    return mProgress;
  }
  @DoNotStrip
  public ArrayList<Float> getRadii() {
    return mRadii;
  }
  @DoNotStrip
  public ArrayList<Integer> getColors() {
    return mColors;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getSrcs() {
    return mSrcs;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getPoints() {
    return mPoints;
  }
  @DoNotStrip
  public ArrayList<YogaValue> getDimensions() {
    return mDimensions;
  }
  @DoNotStrip
  public ArrayList<String> getSizes() {
    return mSizes;
  }
  @DoNotStrip
  public ArrayList<ArrayPropsWithOptionalGenNativeComponentPropsObjectElement> getObject() {
    return mObject;
  }
  @DoNotStrip
  public ArrayList<ArrayPropsWithOptionalGenNativeComponentPropsArrayElement> getArray() {
    return mArray;
  }
  @DoNotStrip
  public ArrayList<ArrayList<ArrayPropsWithOptionalGenNativeComponentPropsArrayOfArrayOfObjectElementElement>> getArrayOfArrayOfObject() {
    return mArrayOfArrayOfObject;
  }
  @DoNotStrip
  public ArrayList<Dynamic> getArrayOfMixed() {
    return mArrayOfMixed;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture ARRAY_PROPS_WITH_OPTIONAL_OBJECT_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsWithOptionalObjectGenNativeComponentPropsObjectElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsWithOptionalObjectGenNativeComponentPropsObjectElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayElementObjectElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayElementObjectElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayElement {
  private ArrayList<ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayElementObjectElement> mObject;
  @DoNotStrip
  public ArrayList<ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayElementObjectElement> getObject() {
    return mObject;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayOfArrayOfObjectElementElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayOfArrayOfObjectElementElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsWithOptionalObjectGenNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.Dynamic;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.yoga.YogaValue;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsWithOptionalObjectGenNativeComponentProps {
  private ArrayList<String> mNames;
  private ArrayList<Boolean> mDisableds;
  private ArrayList<Integer> mProgress;
  private ArrayList<Float> mRadii;
  private ArrayList<Integer> mColors;
  private ArrayList<ReadableMap> mSrcs;
  private ArrayList<ReadableMap> mPoints;
  private ArrayList<YogaValue> mDimensions;
  private ArrayList<String> mSizes;
  private ArrayList<ArrayPropsWithOptionalObjectGenNativeComponentPropsObjectElement> mObject;
  private ArrayList<ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayElement> mArray;
  private ArrayList<ArrayList<ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayOfArrayOfObjectElementElement>> mArrayOfArrayOfObject;
  private ArrayList<Dynamic> mArrayOfMixed;
  @DoNotStrip
  public ArrayList<String> getNames() {
    return mNames;
  }
  @DoNotStrip
  public ArrayList<Boolean> getDisableds() {
    return mDisableds;
  }
  @DoNotStrip
  public ArrayList<Integer> getProgress() {
    return mProgress;
  }
  @DoNotStrip
  public ArrayList<Float> getRadii() {
    return mRadii;
  }
  @DoNotStrip
  public ArrayList<Integer> getColors() {
    return mColors;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getSrcs() {
    return mSrcs;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getPoints() {
    return mPoints;
  }
  @DoNotStrip
  public ArrayList<YogaValue> getDimensions() {
    return mDimensions;
  }
  @DoNotStrip
  public ArrayList<String> getSizes() {
    return mSizes;
  }
  @DoNotStrip
  public ArrayList<ArrayPropsWithOptionalObjectGenNativeComponentPropsObjectElement> getObject() {
    return mObject;
  }
  @DoNotStrip
  public ArrayList<ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayElement> getArray() {
    return mArray;
  }
  @DoNotStrip
  public ArrayList<ArrayList<ArrayPropsWithOptionalObjectGenNativeComponentPropsArrayOfArrayOfObjectElementElement>> getArrayOfArrayOfObject() {
    return mArrayOfArrayOfObject;
  }
  @DoNotStrip
  public ArrayList<Dynamic> getArrayOfMixed() {
    return mArrayOfMixed;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/BooleanPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class BooleanPropNativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture COLOR_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/ColorPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ColorPropNativeComponentProps {
  private @Nullable Integer mTintColor;
  @DoNotStrip
  public @Nullable Integer getTintColor() {
    return mTintColor;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture COMMANDS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/CommandNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class CommandNativeComponentProps {


}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/CommandNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class CommandNativeComponentProps {
  private @Nullable String mAccessibilityHint;
  @DoNotStrip
  public @Nullable String getAccessibilityHint() {
    return mAccessibilityHint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture DIMENSION_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/CustomView/DimensionPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.CustomView;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.yoga.YogaValue;

@DoNotStrip
public class DimensionPropNativeComponentProps {
  private @Nullable YogaValue mMarginBack;
  @DoNotStrip
  public @Nullable YogaValue getMarginBack() {
    return mMarginBack;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/DoublePropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class DoublePropNativeComponentProps {
  private double mBlurRadius;
  private double mBlurRadius2;
  private double mBlurRadius3;
  private double mBlurRadius4;
  private double mBlurRadius5;
  private double mBlurRadius6;
  @DoNotStrip
  public double getBlurRadius() {
    return mBlurRadius;
  }
  @DoNotStrip
  public double getBlurRadius2() {
    return mBlurRadius2;
  }
  @DoNotStrip
  public double getBlurRadius3() {
    return mBlurRadius3;
  }
  @DoNotStrip
  public double getBlurRadius4() {
    return mBlurRadius4;
  }
  @DoNotStrip
  public double getBlurRadius5() {
    return mBlurRadius5;
  }
  @DoNotStrip
  public double getBlurRadius6() {
    return mBlurRadius6;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/EventsNestedObjectNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class EventsNestedObjectNativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EVENT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/EventsNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class EventsNativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/InterfaceOnlyComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class InterfaceOnlyComponentProps {


}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EXCLUDE_ANDROID 1`] = `Map {}`;

exports[`GeneratePropsJavaPojo can generate fixture EXCLUDE_ANDROID_IOS 1`] = `Map {}`;

exports[`GeneratePropsJavaPojo can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ComponentFile1/ExcludedIosComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ComponentFile1;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ExcludedIosComponentProps {


}
",
  "java/com/facebook/react/viewmanagers/ComponentFile2/MultiFileIncludedNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ComponentFile2;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class MultiFileIncludedNativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture FLOAT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/FloatPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class FloatPropNativeComponentProps {
  private float mBlurRadius;
  private float mBlurRadius2;
  private float mBlurRadius3;
  private float mBlurRadius4;
  private float mBlurRadius5;
  private float mBlurRadius6;
  @DoNotStrip
  public float getBlurRadius() {
    return mBlurRadius;
  }
  @DoNotStrip
  public float getBlurRadius2() {
    return mBlurRadius2;
  }
  @DoNotStrip
  public float getBlurRadius3() {
    return mBlurRadius3;
  }
  @DoNotStrip
  public float getBlurRadius4() {
    return mBlurRadius4;
  }
  @DoNotStrip
  public float getBlurRadius5() {
    return mBlurRadius5;
  }
  @DoNotStrip
  public float getBlurRadius6() {
    return mBlurRadius6;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture IMAGE_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ImagePropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class ImagePropNativeComponentProps {
  private @Nullable ReadableMap mThumbImage;
  @DoNotStrip
  public @Nullable ReadableMap getThumbImage() {
    return mThumbImage;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INSETS_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ScrollView/InsetsPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ScrollView;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class InsetsPropNativeComponentProps {
  private @Nullable ReadableMap mContentInset;
  @DoNotStrip
  public @Nullable ReadableMap getContentInset() {
    return mContentInset;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/Int32EnumPropsNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class Int32EnumPropsNativeComponentProps {
  private @Nullable Integer mMaxInterval;
  @DoNotStrip
  public @Nullable Integer getMaxInterval() {
    return mMaxInterval;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INTEGER_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/IntegerPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class IntegerPropNativeComponentProps {
  private int mProgress1;
  private int mProgress2;
  private int mProgress3;
  @DoNotStrip
  public int getProgress1() {
    return mProgress1;
  }
  @DoNotStrip
  public int getProgress2() {
    return mProgress2;
  }
  @DoNotStrip
  public int getProgress3() {
    return mProgress3;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/InterfaceOnlyComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class InterfaceOnlyComponentProps {
  private @Nullable String mAccessibilityHint;
  @DoNotStrip
  public @Nullable String getAccessibilityHint() {
    return mAccessibilityHint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture MIXED_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/CustomView/MixedPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.CustomView;

import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.Dynamic;

@DoNotStrip
public class MixedPropNativeComponentProps {
  private Dynamic mMixedProp;
  @DoNotStrip
  public Dynamic getMixedProp() {
    return mMixedProp;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ImageColorPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class ImageColorPropNativeComponentProps {
  private @Nullable ReadableMap mThumbImage;
  private @Nullable Integer mColor;
  private @Nullable Integer mThumbTintColor;
  private @Nullable ReadableMap mPoint;
  @DoNotStrip
  public @Nullable ReadableMap getThumbImage() {
    return mThumbImage;
  }
  @DoNotStrip
  public @Nullable Integer getColor() {
    return mColor;
  }
  @DoNotStrip
  public @Nullable Integer getThumbTintColor() {
    return mThumbTintColor;
  }
  @DoNotStrip
  public @Nullable ReadableMap getPoint() {
    return mPoint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/NoPropsNoEvents/NoPropsNoEventsComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.NoPropsNoEvents;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class NoPropsNoEventsComponentProps {


}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture OBJECT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropObjectArrayProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ObjectPropsPropsObjectPropObjectArrayProp {
  private ArrayList<String> mArray;
  @DoNotStrip
  public ArrayList<String> getArray() {
    return mArray;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp {
  private @Nullable ReadableMap mImage;
  private @Nullable Integer mColor;
  private @Nullable ReadableMap mPoint;
  @DoNotStrip
  public @Nullable ReadableMap getImage() {
    return mImage;
  }
  @DoNotStrip
  public @Nullable Integer getColor() {
    return mColor;
  }
  @DoNotStrip
  public @Nullable ReadableMap getPoint() {
    return mPoint;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedPropANestedPropB.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsPropsObjectPropNestedPropANestedPropB {
  private @Nullable String mNestedPropC;
  @DoNotStrip
  public @Nullable String getNestedPropC() {
    return mNestedPropC;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedPropA.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsPropsObjectPropNestedPropA {
  private ObjectPropsPropsObjectPropNestedPropANestedPropB mNestedPropB;
  @DoNotStrip
  public ObjectPropsPropsObjectPropNestedPropANestedPropB getNestedPropB() {
    return mNestedPropB;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedArrayAsProperty.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ObjectPropsPropsObjectPropNestedArrayAsProperty {
  private ArrayList<ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement> mArrayProp;
  @DoNotStrip
  public ArrayList<ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement> getArrayProp() {
    return mArrayProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsPropsObjectProp {
  private @Nullable String mStringProp;
  private boolean mBooleanProp;
  private float mFloatProp;
  private int mIntProp;
  private @Nullable String mStringUserDefaultProp;
  private boolean mBooleanUserDefaultProp;
  private float mFloatUserDefaultProp;
  private int mIntUserDefaultProp;
  private @Nullable String mStringEnumProp;
  private @Nullable Integer mIntEnumProp;
  private ObjectPropsPropsObjectPropObjectArrayProp mObjectArrayProp;
  private ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp mObjectPrimitiveRequiredProp;
  private ObjectPropsPropsObjectPropNestedPropA mNestedPropA;
  private ObjectPropsPropsObjectPropNestedArrayAsProperty mNestedArrayAsProperty;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
  @DoNotStrip
  public boolean getBooleanProp() {
    return mBooleanProp;
  }
  @DoNotStrip
  public float getFloatProp() {
    return mFloatProp;
  }
  @DoNotStrip
  public int getIntProp() {
    return mIntProp;
  }
  @DoNotStrip
  public @Nullable String getStringUserDefaultProp() {
    return mStringUserDefaultProp;
  }
  @DoNotStrip
  public boolean getBooleanUserDefaultProp() {
    return mBooleanUserDefaultProp;
  }
  @DoNotStrip
  public float getFloatUserDefaultProp() {
    return mFloatUserDefaultProp;
  }
  @DoNotStrip
  public int getIntUserDefaultProp() {
    return mIntUserDefaultProp;
  }
  @DoNotStrip
  public @Nullable String getStringEnumProp() {
    return mStringEnumProp;
  }
  @DoNotStrip
  public @Nullable Integer getIntEnumProp() {
    return mIntEnumProp;
  }
  @DoNotStrip
  public ObjectPropsPropsObjectPropObjectArrayProp getObjectArrayProp() {
    return mObjectArrayProp;
  }
  @DoNotStrip
  public ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp getObjectPrimitiveRequiredProp() {
    return mObjectPrimitiveRequiredProp;
  }
  @DoNotStrip
  public ObjectPropsPropsObjectPropNestedPropA getNestedPropA() {
    return mNestedPropA;
  }
  @DoNotStrip
  public ObjectPropsPropsObjectPropNestedArrayAsProperty getNestedArrayAsProperty() {
    return mNestedArrayAsProperty;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsProps {
  private ObjectPropsPropsObjectProp mObjectProp;
  @DoNotStrip
  public ObjectPropsPropsObjectProp getObjectProp() {
    return mObjectProp;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture OBJECT_PROPS_WITH_OPTIONAL_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalGenPropsObjectPropObjectArrayProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ObjectPropsWithOptionalGenPropsObjectPropObjectArrayProp {
  private ArrayList<String> mArray;
  @DoNotStrip
  public ArrayList<String> getArray() {
    return mArray;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalGenPropsObjectPropObjectPrimitiveRequiredProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class ObjectPropsWithOptionalGenPropsObjectPropObjectPrimitiveRequiredProp {
  private @Nullable ReadableMap mImage;
  private @Nullable Integer mColor;
  private @Nullable ReadableMap mPoint;
  @DoNotStrip
  public @Nullable ReadableMap getImage() {
    return mImage;
  }
  @DoNotStrip
  public @Nullable Integer getColor() {
    return mColor;
  }
  @DoNotStrip
  public @Nullable ReadableMap getPoint() {
    return mPoint;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalGenPropsObjectPropNestedPropANestedPropB.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsWithOptionalGenPropsObjectPropNestedPropANestedPropB {
  private @Nullable String mNestedPropC;
  @DoNotStrip
  public @Nullable String getNestedPropC() {
    return mNestedPropC;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalGenPropsObjectPropNestedPropA.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsWithOptionalGenPropsObjectPropNestedPropA {
  private ObjectPropsWithOptionalGenPropsObjectPropNestedPropANestedPropB mNestedPropB;
  @DoNotStrip
  public ObjectPropsWithOptionalGenPropsObjectPropNestedPropANestedPropB getNestedPropB() {
    return mNestedPropB;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalGenPropsObjectPropNestedArrayAsPropertyArrayPropElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsWithOptionalGenPropsObjectPropNestedArrayAsPropertyArrayPropElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalGenPropsObjectPropNestedArrayAsProperty.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ObjectPropsWithOptionalGenPropsObjectPropNestedArrayAsProperty {
  private ArrayList<ObjectPropsWithOptionalGenPropsObjectPropNestedArrayAsPropertyArrayPropElement> mArrayProp;
  @DoNotStrip
  public ArrayList<ObjectPropsWithOptionalGenPropsObjectPropNestedArrayAsPropertyArrayPropElement> getArrayProp() {
    return mArrayProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalGenPropsObjectProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsWithOptionalGenPropsObjectProp {
  private @Nullable String mStringProp;
  private boolean mBooleanProp;
  private float mFloatProp;
  private int mIntProp;
  private @Nullable String mStringUserDefaultProp;
  private boolean mBooleanUserDefaultProp;
  private float mFloatUserDefaultProp;
  private int mIntUserDefaultProp;
  private @Nullable String mStringEnumProp;
  private @Nullable Integer mIntEnumProp;
  private ObjectPropsWithOptionalGenPropsObjectPropObjectArrayProp mObjectArrayProp;
  private ObjectPropsWithOptionalGenPropsObjectPropObjectPrimitiveRequiredProp mObjectPrimitiveRequiredProp;
  private ObjectPropsWithOptionalGenPropsObjectPropNestedPropA mNestedPropA;
  private ObjectPropsWithOptionalGenPropsObjectPropNestedArrayAsProperty mNestedArrayAsProperty;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
  @DoNotStrip
  public boolean getBooleanProp() {
    return mBooleanProp;
  }
  @DoNotStrip
  public float getFloatProp() {
    return mFloatProp;
  }
  @DoNotStrip
  public int getIntProp() {
    return mIntProp;
  }
  @DoNotStrip
  public @Nullable String getStringUserDefaultProp() {
    return mStringUserDefaultProp;
  }
  @DoNotStrip
  public boolean getBooleanUserDefaultProp() {
    return mBooleanUserDefaultProp;
  }
  @DoNotStrip
  public float getFloatUserDefaultProp() {
    return mFloatUserDefaultProp;
  }
  @DoNotStrip
  public int getIntUserDefaultProp() {
    return mIntUserDefaultProp;
  }
  @DoNotStrip
  public @Nullable String getStringEnumProp() {
    return mStringEnumProp;
  }
  @DoNotStrip
  public @Nullable Integer getIntEnumProp() {
    return mIntEnumProp;
  }
  @DoNotStrip
  public ObjectPropsWithOptionalGenPropsObjectPropObjectArrayProp getObjectArrayProp() {
    return mObjectArrayProp;
  }
  @DoNotStrip
  public ObjectPropsWithOptionalGenPropsObjectPropObjectPrimitiveRequiredProp getObjectPrimitiveRequiredProp() {
    return mObjectPrimitiveRequiredProp;
  }
  @DoNotStrip
  public ObjectPropsWithOptionalGenPropsObjectPropNestedPropA getNestedPropA() {
    return mNestedPropA;
  }
  @DoNotStrip
  public ObjectPropsWithOptionalGenPropsObjectPropNestedArrayAsProperty getNestedArrayAsProperty() {
    return mNestedArrayAsProperty;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalGenProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsWithOptionalGenProps {
  private ObjectPropsWithOptionalGenPropsObjectProp mObjectProp;
  @DoNotStrip
  public ObjectPropsWithOptionalGenPropsObjectProp getObjectProp() {
    return mObjectProp;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture OBJECT_PROPS_WITH_OPTIONAL_OBJECT_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalObjectGenPropsObjectPropObjectArrayProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ObjectPropsWithOptionalObjectGenPropsObjectPropObjectArrayProp {
  private ArrayList<String> mArray;
  @DoNotStrip
  public ArrayList<String> getArray() {
    return mArray;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalObjectGenPropsObjectPropObjectPrimitiveRequiredProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class ObjectPropsWithOptionalObjectGenPropsObjectPropObjectPrimitiveRequiredProp {
  private @Nullable ReadableMap mImage;
  private @Nullable Integer mColor;
  private @Nullable ReadableMap mPoint;
  @DoNotStrip
  public @Nullable ReadableMap getImage() {
    return mImage;
  }
  @DoNotStrip
  public @Nullable Integer getColor() {
    return mColor;
  }
  @DoNotStrip
  public @Nullable ReadableMap getPoint() {
    return mPoint;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalObjectGenPropsObjectPropNestedPropANestedPropB.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsWithOptionalObjectGenPropsObjectPropNestedPropANestedPropB {
  private @Nullable String mNestedPropC;
  @DoNotStrip
  public @Nullable String getNestedPropC() {
    return mNestedPropC;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalObjectGenPropsObjectPropNestedPropA.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsWithOptionalObjectGenPropsObjectPropNestedPropA {
  private ObjectPropsWithOptionalObjectGenPropsObjectPropNestedPropANestedPropB mNestedPropB;
  @DoNotStrip
  public ObjectPropsWithOptionalObjectGenPropsObjectPropNestedPropANestedPropB getNestedPropB() {
    return mNestedPropB;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalObjectGenPropsObjectPropNestedArrayAsPropertyArrayPropElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsWithOptionalObjectGenPropsObjectPropNestedArrayAsPropertyArrayPropElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalObjectGenPropsObjectPropNestedArrayAsProperty.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ObjectPropsWithOptionalObjectGenPropsObjectPropNestedArrayAsProperty {
  private ArrayList<ObjectPropsWithOptionalObjectGenPropsObjectPropNestedArrayAsPropertyArrayPropElement> mArrayProp;
  @DoNotStrip
  public ArrayList<ObjectPropsWithOptionalObjectGenPropsObjectPropNestedArrayAsPropertyArrayPropElement> getArrayProp() {
    return mArrayProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalObjectGenPropsObjectProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsWithOptionalObjectGenPropsObjectProp {
  private @Nullable String mStringProp;
  private boolean mBooleanProp;
  private float mFloatProp;
  private int mIntProp;
  private @Nullable String mStringUserDefaultProp;
  private boolean mBooleanUserDefaultProp;
  private float mFloatUserDefaultProp;
  private int mIntUserDefaultProp;
  private @Nullable String mStringEnumProp;
  private @Nullable Integer mIntEnumProp;
  private ObjectPropsWithOptionalObjectGenPropsObjectPropObjectArrayProp mObjectArrayProp;
  private ObjectPropsWithOptionalObjectGenPropsObjectPropObjectPrimitiveRequiredProp mObjectPrimitiveRequiredProp;
  private ObjectPropsWithOptionalObjectGenPropsObjectPropNestedPropA mNestedPropA;
  private ObjectPropsWithOptionalObjectGenPropsObjectPropNestedArrayAsProperty mNestedArrayAsProperty;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
  @DoNotStrip
  public boolean getBooleanProp() {
    return mBooleanProp;
  }
  @DoNotStrip
  public float getFloatProp() {
    return mFloatProp;
  }
  @DoNotStrip
  public int getIntProp() {
    return mIntProp;
  }
  @DoNotStrip
  public @Nullable String getStringUserDefaultProp() {
    return mStringUserDefaultProp;
  }
  @DoNotStrip
  public boolean getBooleanUserDefaultProp() {
    return mBooleanUserDefaultProp;
  }
  @DoNotStrip
  public float getFloatUserDefaultProp() {
    return mFloatUserDefaultProp;
  }
  @DoNotStrip
  public int getIntUserDefaultProp() {
    return mIntUserDefaultProp;
  }
  @DoNotStrip
  public @Nullable String getStringEnumProp() {
    return mStringEnumProp;
  }
  @DoNotStrip
  public @Nullable Integer getIntEnumProp() {
    return mIntEnumProp;
  }
  @DoNotStrip
  public ObjectPropsWithOptionalObjectGenPropsObjectPropObjectArrayProp getObjectArrayProp() {
    return mObjectArrayProp;
  }
  @DoNotStrip
  public ObjectPropsWithOptionalObjectGenPropsObjectPropObjectPrimitiveRequiredProp getObjectPrimitiveRequiredProp() {
    return mObjectPrimitiveRequiredProp;
  }
  @DoNotStrip
  public ObjectPropsWithOptionalObjectGenPropsObjectPropNestedPropA getNestedPropA() {
    return mNestedPropA;
  }
  @DoNotStrip
  public ObjectPropsWithOptionalObjectGenPropsObjectPropNestedArrayAsProperty getNestedArrayAsProperty() {
    return mNestedArrayAsProperty;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsWithOptionalObjectGenProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsWithOptionalObjectGenProps {
  private ObjectPropsWithOptionalObjectGenPropsObjectProp mObjectProp;
  @DoNotStrip
  public ObjectPropsWithOptionalObjectGenPropsObjectProp getObjectProp() {
    return mObjectProp;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture POINT_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/PointPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class PointPropNativeComponentProps {
  private @Nullable ReadableMap mStartPoint;
  @DoNotStrip
  public @Nullable ReadableMap getStartPoint() {
    return mStartPoint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/StringEnumPropsNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class StringEnumPropsNativeComponentProps {
  private @Nullable String mAlignment;
  @DoNotStrip
  public @Nullable String getAlignment() {
    return mAlignment;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture STRING_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/StringPropComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class StringPropComponentProps {
  private @Nullable String mAccessibilityHint;
  private @Nullable String mAccessibilityRole;
  @DoNotStrip
  public @Nullable String getAccessibilityHint() {
    return mAccessibilityHint;
  }
  @DoNotStrip
  public @Nullable String getAccessibilityRole() {
    return mAccessibilityRole;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ComponentFile1/MultiFile1NativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ComponentFile1;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class MultiFile1NativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
  "java/com/facebook/react/viewmanagers/ComponentFile2/MultiFile2NativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ComponentFile2;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class MultiFile2NativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/MyComponents/MultiComponent1NativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.MyComponents;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class MultiComponent1NativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
  "java/com/facebook/react/viewmanagers/MyComponents/MultiComponent2NativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.MyComponents;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class MultiComponent2NativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;
